--- a/app/src/main/res/layout/fraghome.xml
+++ b/app/src/main/res/layout/fraghome.xml
@@ -69,6 +69,20 @@
                                 android:text="오늘의 Todo"
                                 android:textSize="30dp"
                                 />
+
+                            <ListView
+                                android:id="@+id/lv_tdlist"
+                                android:layout_width="match_parent"
+                                android:layout_marginStart="20dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginEnd="20dp"
+                                android:layout_marginRight="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+                            </ListView>
+
                         </LinearLayout>
 <!--                         여기에 앞으로 할 일-->
                         <LinearLayout
@@ -88,6 +102,20 @@
                                 android:text="앞으로의 Todo"
                                 android:textSize="30dp"
                                 />
+
+                            <ListView
+                                android:id="@+id/lv_fulist"
+                                android:layout_width="match_parent"
+                                android:layout_marginStart="20dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginEnd="20dp"
+                                android:layout_marginRight="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+                            </ListView>
+
                         </LinearLayout>
 
                     </LinearLayout>
