--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -46,7 +46,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginRight="20dp"
+            >
 
             <TextView
                 android:id="@+id/tv_date"
@@ -55,7 +57,7 @@
                 android:text="1970년 1월 1일"
                 android:textSize="22dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginEnd="40dp"
                 android:layout_marginRight="40dp"
                 tools:layout_editor_absoluteX="36dp"
@@ -74,7 +76,6 @@
                 android:layout_width="40dp"
                 android:layout_height="49dp"
                 android:layout_centerHorizontal="true"
-                android:ems="10"
                 android:text="+"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"/>
