--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -79,7 +79,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="16dp"
             android:ems="15"
-            android:hint="   이름"
+            android:hint="   닉네임"
             android:background="@drawable/textback"
             android:inputType="text" />
 
