--- a/app/src/main/res/layout/activity_frd.xml
+++ b/app/src/main/res/layout/activity_frd.xml
@@ -77,22 +77,21 @@
             <LinearLayout
                 android:id="@+id/frd_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_height="367dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginBottom="50dp"
+                android:layout_weight="1"
                 android:background="@drawable/bestback"
-                android:layout_weight="1">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/frd_1"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/img_frd1"
@@ -100,24 +99,25 @@
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
                         android:src="@drawable/user1" />
+
                     <Button
                         android:id="@+id/btn_frd1"
+                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        app:backgroundTint="@color/white"
                         android:gravity="left"
                         android:text=" hb"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
-                        android:textColor="@color/black" />
+                        app:backgroundTint="@color/white" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/frd_2"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/img_frd2"
@@ -125,24 +125,25 @@
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
                         android:src="@drawable/user3" />
+
                     <Button
                         android:id="@+id/btn_frd2"
+                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        app:backgroundTint="@color/white"
                         android:gravity="left"
                         android:text=" user"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
-                        android:textColor="@color/black" />
+                        app:backgroundTint="@color/white" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/frd_3"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/img_frd3"
@@ -162,13 +163,13 @@
                         android:textSize="20dp"
                         app:backgroundTint="@color/white" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/frd_4"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/img_frd4"
@@ -188,13 +189,13 @@
                         android:textSize="20dp"
                         app:backgroundTint="@color/white" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/frd_5"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/img_frd5"
@@ -202,16 +203,17 @@
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
                         android:src="@drawable/user2" />
+
                     <Button
                         android:id="@+id/btn_frd5"
+                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        app:backgroundTint="@color/white"
                         android:gravity="left"
                         android:text=" 친구5 아이디"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
-                        android:textColor="@color/black" />
+                        app:backgroundTint="@color/white" />
                 </LinearLayout>
 
 
